--- a/curve.html
+++ b/curve.html
@@ -4,7 +4,7 @@
 		background-color: black;
 	}
 </style>
-<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button>
+<button onclick='backToGrid()'><i class="fa fa-long-arrow-left"></i></button>
 <div>
 	<h1>System Head Curve</h1>
 	<form>
