--- a/headtool.html
+++ b/headtool.html
@@ -22,7 +22,7 @@
 	}
 }
 </style>
-<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button>
+<button onclick='backToGrid()'><i class="fa fa-long-arrow-left"></i></button>
 <h1>Head Tool</h1>
 <table style='width: 100%'>
 	<tr>
