--- a/notes.html
+++ b/notes.html
@@ -20,7 +20,7 @@
 	Name<br>
 	<input name=name><br>
 	Date<br>
-	<input type=date/><br>
+	<input type=date><br>
 	Facility<br>
 	<input name=facility><br>
 	System<br>
