--- a/notes.html
+++ b/notes.html
@@ -21,7 +21,7 @@
 	Name<br>
 	<input name=name><br>
 	Date<br>
-	<input type=date><br>
+	<input name=date type=date><br>
 	Facility<br>
 	<input name=facility><br>
 	System<br>
