--- a/grid.html
+++ b/grid.html
@@ -130,7 +130,7 @@
     <tr>
       <td>Efficiency class</td>
       <td> 
-        <select>
+        <select name='efficiency'>
           <option>Standard</option>
           <option>Energy</option>
           <option>Average</option>
@@ -179,9 +179,9 @@
     <tr>
       <td>Load estimate method</td>
       <td> 
-        <select>
+        <select name='load_method'>
           <option>Power</option>
-          <option>Curent</option>
+          <option>Current</option>
         </select>
       </td>
     </tr>
