--- a/notes.html
+++ b/notes.html
@@ -65,6 +65,7 @@
 				line: 1,
 				power_rating: 30,
 				motor_rpm: 1780,
+				efficiency: 0,
 				motor_voltage: 460,
 				amps: 225.4,
 				margin: 0,
@@ -72,6 +73,7 @@
 				cost: .05,
 				flow: 2000,
 				head: 277,
+				load_method: 0,
 				est_power: 150,
 				field_voltage: 460,
 
