--- a/conditions.html
+++ b/conditions.html
@@ -33,6 +33,7 @@
 <button>IMPORT</button>
 <button>EXPORT</button>
 <button onclick='removeAll()'>REMOVE ALL</button>
+<button onclick='restoreDefaults()'>RESTORE DEFAULTS</button>
 
 <script>
 	function uncheck() {
