--- a/grid.html
+++ b/grid.html
@@ -287,7 +287,7 @@
     let e = dlg.data('src');
     switch(dlg.find(':checked').parent().index()) {
         case 1:
-          LS.setItem('defaults',JSON.stringify(colData(e)));
+          saveProp('defaults',colData(e));
           break;
         case 2:
           let v,d = loadProp('defaults');
