--- a/index.html
+++ b/index.html
@@ -87,10 +87,40 @@
         showUnitSgl(e,'feet',.3048);
       }      
       function saveCond() {
-        LS.setItem('conditions',JSON.stringify(Cond));
+        saveProp('conditions',Cond);
       }  
       function loadProp(nm) {
         return JSON.parse(LS.getItem(nm));
+      }
+      function saveProp(nm,v) {
+        LS.setItem(nm,JSON.stringify(v));
+      }      
+      function restoreDefaults() {
+        saveProp('defaults', {
+          pump_style: 5,
+          pump_rpm: 1780,
+          drive: 0,
+          viscosity: 1,
+          specific_gravity: 1,
+          stages: 1,
+          speed: true,
+          line: 1,
+          power_rating: 30,
+          motor_rpm: 1780,
+          efficiency: 0,
+          motor_voltage: 460,
+          amps: 225.4,
+          margin: 0,
+          fraction: 1,
+          cost: .05,
+          flow: 2000,
+          head: 277,
+          load_method: 0,
+          est_power: 150,
+          field_voltage: 460,
+
+          grid: false       
+        });
       }
       function main() {
         $('#container').load('conditions.html');
@@ -99,7 +129,9 @@
       Bridge = require('./build/Release/bridge');
       LS = localStorage;
       Cond = loadProp('conditions') || []
-
+      if (loadProp('defaults')===null) {
+        restoreDefaults();
+      }
       $(document).ready(function() {
         main();
       });
