--- a/headtool.html
+++ b/headtool.html
@@ -39,7 +39,7 @@
 			Suction line loss coefficients<br>
 			<input id=Ks type=number/><br>
 
-
+			<label><input type=checkbox> Suction tank</label><br>
 
 			Discharge pipe diameter <em>(mm)</em><br>
 			<input id=Dd type=number/>
