--- a/grid.html
+++ b/grid.html
@@ -165,8 +165,8 @@
       <td class='th'>Field</td><td/>
     </tr>        
     <tr>
-      <td><span>Flow rate</span> <em>(L/s)</em></td>
-      <td><input name='flow' type="number" onchange="pumpEff(this)"> <button onclick=showUnit(this,'#unit_flow')><i class="fa fa-calculator"/></button></td>
+      <td><div style="display: flex; justify-content: space-between">Flow rate <button>L/s</button></div></td>
+      <td><input name='flow' type="number" onchange="pumpEff(this)"></td>
     </tr>
     <tr>
       <td><span>Head</span> <em>(m)</em></td>
