--- a/grid.html
+++ b/grid.html
@@ -95,7 +95,7 @@
       </td>
     </tr>
     <tr>
-      <td><span>Kinematic Viscosity</span> <em>(cS)</em></td>
+      <td><div class="split">Kinematic Viscosity <em>(cS)</em></div></td>
       <td><input name='viscosity' type="number"></td>
     </tr>
     <tr>
@@ -122,7 +122,7 @@
       </td>
     </tr>      
     <tr>
-      <td><span>Power Rating</span> <em>(kW)</em></td>
+      <td><div class="split">Power Rating <em>(kW)</em></div></td>
       <td>
         <input name='power_rating' type="number">
         <button onclick='showUnit_kW(this)'><i class="fa fa-calculator"/></button>
