--- a/grid.html
+++ b/grid.html
@@ -122,10 +122,9 @@
       </td>
     </tr>      
     <tr>
-      <td><div>Power Rating <em>(kW)</em></div></td>
+      <td><div>Power Rating <button>kW</button></div></td>
       <td>
         <input name='power_rating' type="number">
-        <button onclick='showUnit_kW(this)'><i class="fa fa-calculator"/></button>
       </td>
     </tr>
     <tr>
@@ -174,10 +173,9 @@
       <td><input name='flow' type="number" onchange="pumpEff(this)"></td>
     </tr>
     <tr>
-      <td><div>Head <em>(m)</em></div></td>
+      <td><div>Head <button>m</button></div></td>
       <td>
         <input name='head' type="number">
-        <button onclick=showUnit_m(this)><i class="fa fa-calculator"/></button>
         <button onclick='backload("headtool")'><i class="fa fa-wrench"/></button>
       </td>
     </tr>       
