--- a/grid.html
+++ b/grid.html
@@ -122,7 +122,7 @@
       </td>
     </tr>      
     <tr>
-      <td><div>Power Rating <button onclick="showUnits()">kW</button></div></td>
+      <td><div>Power Rating <em>(kW)</em></div></td>
       <td>
         <input name='power_rating' type="number">
       </td>
@@ -169,11 +169,11 @@
       <td class='th'>Field</td><td/>
     </tr>        
     <tr>
-      <td><div>Flow rate <button>L/s</button></div></td>
+      <td><div>Flow rate <em>(L/s)</em></div></td>
       <td><input name='flow' type="number" onchange="pumpEff(this)"></td>
     </tr>
     <tr>
-      <td><div>Head <button>m</button></div></td>
+      <td><div>Head <em>(m)</em></div></td>
       <td>
         <input name='head' type="number">
         <button onclick='backload("headtool")'><i class="fa fa-wrench"/></button>
