--- a/conditions.html
+++ b/conditions.html
@@ -18,7 +18,7 @@
 	li>* {
 		vertical-align: middle;
 	}
-	th:not(first-child),td:nth-child(n+1) {
+	th:nth-child(n+2),td:nth-child(n+2) {
 		padding-right: 2rem;
 	}
 </style>
@@ -31,7 +31,7 @@
 		<th>Power</th>
 	</tr>
 	<tr>
-		<td><label><input type="radio"> L/s</label></td>
+		<td style="padding-right: 1rem"><label><input type="radio"> L/s</label></td>
 		<td><label><input type="radio"> m^3/hr</label></td>
 		<td>m</td>
 		<td>kW</td>
